--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "imports-loader": "^0.8.0",
+    "jquery": "^3.4.1",
     "lib-flexible": "^0.3.2",
     "lodash.debounce": "^4.0.8",
     "node-sass": "^4.11.0",
